--- a/Wiki/Meetings/07.03.2024.md
+++ b/Wiki/Meetings/07.03.2024.md
@@ -29,3 +29,5 @@ Fidn the number of visitors, how many would be there max number of nodes.
 Real data in the peak district.
 Most people stick to paths so better connectivity.
 A database for number of nodes, how wide the paths/area is.
+
+Critical analysis of meshtastic into the report for it being bad.
